--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,9 +16,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
-    properties:
-      format_sql: true
 
-logging:
-  level:
-    org.hibernate.SQL: debug
+    # sql을 보여줌
+    show-sql: true
+
+    # sql format pretty
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+
+#logging:
+#  level:
+#    org.hibernate.SQL: debug
