--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       ddl-auto: create-drop
 
     # sql을 보여줌
-    show-sql: true
+#    show-sql: true
 
     # sql format pretty
     properties:
@@ -26,6 +26,9 @@ spring:
         format_sql: true
         use_sql_comments: true
 
-#logging:
-#  level:
-#    org.hibernate.SQL: debug
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
+
+
