--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.querydsl:querydsl-jpa'
     implementation 'org.apache.commons:commons-lang3'
-    implementation "org.springframework.boot:spring-boot-devtools"
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'javax.validation:validation-api'
+    implementation 'org.hibernate.validator:hibernate-validator'
 
     compileOnly 'org.projectlombok:lombok'
 
